@@ -43,7 +43,7 @@
 # you may use a redirect; this requires the "alias" module (RedirectMatch)
 # which you can turn on with (it is usually on by default):
 #
-#      sudo a2emod alias
+#      sudo a2enmod alias
 #
 #<VirtualHost *:80>
 #  ServerName snap.example.com
@@ -87,7 +87,6 @@
 #  # Turn on SSL
 #  #
 #  SSLEngine On
-#  SSLOptions +StdEnvVars
 #  SSLCertificateFile /etc/apache2/ssl-snap/example.com.crt
 #  SSLCertificateKeyFile /etc/apache2/ssl-snap/example.com.key
 #  SSLCertificateChainFile /etc/apache2/ssl-snap/bundle.crt
