@@ -31,6 +31,23 @@ clients=
 stylesheet=/etc/snapwebsites/snapmanagercgi-parser.xsl
 
 
+# redirect_unwanted=<URI>
+#
+# If set, this parameter defines a URI to a website where users have to
+# be redirected.
+#
+# By default we do not define the parameter and users who are not
+# authorized (see clients=...) and hit a backend computer will get
+# a 403 error that tells them the computer cannot be accessed.
+#
+# Note that if there is a gross error in the snapmanager.conf settings
+# then the rediction will not occur. Fix the error (see the log for
+# various details) and then the redirection will occur.
+#
+# Default: <none>
+#redirect_unwanted=
+
+
 # log_server=<path to log properties>
 #
 # If you are using the log server, then this can be used to get the logs
